--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,10 @@ h1 {
   font-size: 96px;
   line-height: 144px;
 }
+
+footer {
+  font-family: "Poppins";
+  font-style: normal;
+  font-size: 18px;
+  line-height: 24px;
+}
