--- a/src/styles.css
+++ b/src/styles.css
@@ -8,10 +8,8 @@ body {
 }
 
 header {
-  background-image: linear-gradient(
-    rgba(0,0,0,0.2),
-    rgba(0,0,0,0.4)),
-  url("../images/Toronto_skyline_in_September_2008.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)),
+    url("../images/Toronto_skyline_in_September_2008.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
@@ -25,7 +23,7 @@ header a {
   line-height: 1.5;
   text-align: center;
   letter-spacing: 3px;
-  letter-transform: uppercase;
+  text-transform: uppercase;
   background-color: white;
   color: #272044;
   padding: 16px 32px;
@@ -59,9 +57,58 @@ footer {
   font-style: normal;
   font-size: 18px;
   line-height: 24px;
+  color: white;
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.9),
+      rgba(39, 32, 68, 0.9)
+    ),
+    url(../images/Flag_of_Toronto.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 100px 0;
 }
 
-@media (max-width: 900px) {
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 10px;
+}
+
+footer h3 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+footer p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  opacity: 0.7;
+  margin-right: 20px;
+}
+
+footer ul {
+  padding: 0;
+}
+
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+footer a {
+  color: white;
+  opacity: 0.7;
+}
+
+@media (max-width: 960px) {
   header {
     padding: 60px 0;
   }
