Added main and formatted it

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,6 +53,59 @@ header h3 {
   margin: 0;
 }
 
+main {
+  background-color: white;
+}
+
+main img {
+  max-width: 450px;
+  max-height: 450px;
+}
+
+.img-responsive {
+  max-width: 100%;
+}
+
+main h2 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  color: #272044;
+  opacity: 0.3;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+main h3 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+  color: #272044;
+  margin: 0;
+}
+
+main p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #272044;
+  opacity: 0.7;
+}
+
+.grid {
+  display: grid;
+  grid-gap: 64px;
+}
+
+.grid-2columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-3-colums-1-2-2 {
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
 footer {
   font-style: normal;
   font-size: 18px;
@@ -71,12 +124,7 @@ footer {
 section {
   max-width: 1200px;
   margin: 0 auto;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 2fr 2fr;
-  grid-gap: 64px;
+  padding: 100px 0;
 }
 
 footer h3 {
@@ -90,7 +138,6 @@ footer p {
   font-size: 16px;
   line-height: 1.5;
   opacity: 0.7;
-  
 }
 
 footer ul {
@@ -123,5 +170,14 @@ footer a {
 
   header h3 {
     font-size: 12px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 32px;
+  }
+
+  section {
+    padding: 30px;
   }
 }
