Added cards to the site

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,69 @@ body {
   margin: 0 auto;
 }
 
+.text-center {
+  text-align: center;
+}
+
+.grid {
+  display: grid;
+  grid-gap: 64px;
+}
+
+.img-responsive {
+  display: block;
+  max-width: 100%;
+}
+
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-3-colums {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.grid-3-colums-1-2-2 {
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
+.card {
+  background-color: white;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 30px;
+}
+
+.card-footer {
+  padding: 0 30px 30px;
+}
+
+.btn {
+  display: block;
+  background-color: #462cb3;
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  padding: 16px;
+  text-decoration: none;
+}
+
+section {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 100px;
+}
+
+section.secondary {
+  background-color: #f8f8f8;
+}
+
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)),
     url("../images/Toronto_skyline_in_September_2008.jpg");
@@ -62,10 +125,6 @@ main img {
   max-height: 450px;
 }
 
-.img-responsive {
-  max-width: 100%;
-}
-
 main h2 {
   font-weight: 700;
   font-size: 16px;
@@ -85,25 +144,28 @@ main h3 {
   margin: 0;
 }
 
+main h4 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1;
+  color: #272044;
+  margin: 0;
+}
+
+main h5 {
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 1;
+  color: #272044;
+  margin: 0;
+}
+
 main p {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   color: #272044;
   opacity: 0.7;
-}
-
-.grid {
-  display: grid;
-  grid-gap: 64px;
-}
-
-.grid-2columns {
-  grid-template-columns: 1fr 1fr;
-}
-
-.grid-3-colums-1-2-2 {
-  grid-template-columns: 1fr 2fr 2fr;
 }
 
 footer {
@@ -118,12 +180,6 @@ footer {
     url(../images/Flag_of_Toronto.png);
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 100px 0;
-}
-
-section {
-  max-width: 1200px;
-  margin: 0 auto;
   padding: 100px 0;
 }
 
