--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ body {
 
 .img-responsive {
   display: block;
-  max-width: 100%;
+  width: 100%;
 }
 
 .grid-2-columns {
@@ -33,9 +33,23 @@ body {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.embed {
+  width: 100%;
+  aspect-ratio: 9 / 6;
+}
+
 .card {
   background-color: white;
   margin: 30px 0;
+}
+
+.card-header.grid {
+  grid-gap: 0;
+}
+
+.card-header img {
+  width: 100%;
+  aspect-ratio: 9 / 6;
 }
 
 .card-body {
@@ -235,5 +249,13 @@ footer a {
 
   section {
     padding: 30px;
+  }
+
+  .card-header img {
+    display: none;
+  }
+
+  .embed {
+    aspect-ratio: 16 / 9;
   }
 }
