Added Pinterest posts to the landing page

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,13 @@ body {
   aspect-ratio: 9 / 6;
 }
 
+.pinterest-embeds {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  margin: 30px;
+
+}
+
 .card {
   background-color: white;
   margin: 30px 0;
